# neu-hpc-for-ai

week_01/: Makefile  Parallel_Matrix_Multiplication_Report.md  README.md  bench  bench.c  matmul.c  matmul.h  results.csv  test  test.c
week_02/: README.md
week_02/src/: gemm.cu
week_03/: HW_Report.md  README.md  gemm_h100.py
week_04/: CMakeLists.txt  README.md  app.py  report.md
week_04/include/: flashattn.h
week_04/src/: flashattn_cpu.cpp  flashattn_cuda.cu
week_04/tests/: test_main.cpp
week_05/: readme (2).md  report.md  run_flash_attention.py
week_07/: README.md  modal_moe.py  report.md
week_08/: moe_nccl.py  week8-readme.md  week8-report.md
week_09/: README.md  benchmark.py  collect_modal_evidence.py  modal_app.py  requirements.txt  run_modal_snapshot.py  writeup.md
week_09/src/: debug_log.py  deepseek_moe.py  moe_reference.py  moe_router.py  tk_backend.py  tk_moe_kernel.cu  tk_moe_wrapper.cpp
week_09/tests/: test_expert.py  test_moe.py  test_router.py
week_10/nano-sglang/: README.md  benchmark.py
week_10/nano-sglang/nano_sglang/: block_manager.py  engine.py  kv_cache.py  scheduler.py
